termine informacion de metodologias agiles

--- a/views/Componentes.hbs
+++ b/views/Componentes.hbs
@@ -2,52 +2,43 @@
 <img src="/images/sistinfo.jpg" alt="" width="50%">
 <article class="">
   <h2>Entrada</h2>
-  <p>Conformada con la recopilación y captura de datos al sistema.<br><br>
-    Ejemplo:<br>
-    <ul>
-      <li>El registro de las actas de calificaciones en la facultad.</li>
-      <li>Registro de una acta de escrutinio y cómputo en una elección.</li>
-      <li>El registro de los montos en una venta de medicamentos en una farmacia.</li>
-    </ul>
-  </p>
+  <p>Conformada con la recopilación y captura de datos al sistema.</p>
+  <ul>Ejemplo:
+    <li>El registro de las actas de calificaciones en la facultad.</li>
+    <li>Registro de una acta de escrutinio y cómputo en una elección.</li>
+    <li>El registro de los montos en una venta de medicamentos en una farmacia.</li>
+  </ul>
 </article>
 <article class="">
   <h2>Procesamiento</h2>
-  <p>Es realizar operaciones(manual o automatizada) sobre los datos de entrada para extraer la mayor cantidad de informacion útil para la organización.<br>
-    En donde las operaciones incluyen:
-    <ul>
-      <li>Almacenar para posterior uso.</li>
-      <li>Cálculos.</li>
-      <li>Comparar valores.</li>
-      <li>Realizar acciones alternas.</li>
-    </ul>
-    Ejemplos
-    <ul>
-      <li>Calcular en una hoja de papel el total de ventas en un mes de un negocio.</li>
-      <li>Sumar la cantidad de votos para un partido.</li>
-    </ul>
-  </p>
+  <p>Es realizar operaciones(manual o automatizada) sobre los datos de entrada para extraer la mayor cantidad de informacion útil para la organización.</p>
+  <ul>En donde las operaciones incluyen:
+    <li>Almacenar para posterior uso.</li>
+    <li>Cálculos.</li>
+    <li>Comparar valores.</li>
+    <li>Realizar acciones alternas.</li>
+  </ul>
+  <ul>Ejemplos
+    <li>Calcular en una hoja de papel el total de ventas en un mes de un negocio.</li>
+    <li>Sumar la cantidad de votos para un partido.</li>
+  </ul>
 </article>
 <article class="">
   <h2>Salida</h2>
-  <p>Conformada por toda la información útil lograda en el procesamiento. <br>
-    La salida de un sistema puede ser la entrada de otro sistema.<br><br>
-    Ejemplos
-    <ul>
-      <li>El historial académico de un alumno.</li>
-      <li>El reporte de compras realizadas un día antes. Este puede ser la entrada de un sistema de facturación.</li>
-      <li>Las gráficas de votos totales en un sistema de conteo.</li>
-    </ul>
-  </p>
+  <p>Conformada por toda la información útil lograda en el procesamiento.</p>
+  <p>La salida de un sistema puede ser la entrada de otro sistema.</p>
+  <ul>Ejemplos
+    <li>El historial académico de un alumno.</li>
+    <li>El reporte de compras realizadas un día antes. Este puede ser la entrada de un sistema de facturación.</li>
+    <li>Las gráficas de votos totales en un sistema de conteo.</li>
+  </ul>
 </article>
 <article class="">
   <h2>Retroalimentacion</h2>
-  <p>Son los mensajes que emite el sistema para realizar cambios en la entrada o en la lógica de procesamiento.<br>
-  Un valor de entrada fuera de rangos permitidos, lanza un cuadro de diálogo.<br>
-  La retroalimentación de un sistema también surge cuando el estado de los datos que se encuentran en procesamiento disparan un evento en el que los administradores del sisteman deben tomar una decisión.<br><br>
-  Ejemplo
-    <ul>
-      <li>El sistema detecta que un producto alcanzó el mínimo de exitencias en inventario y lanza un mensaje (cuadro de dialogo o correo electrónico) para avisar el caso.</li>
-    </ul>
-  </p>
+  <p>Son los mensajes que emite el sistema para realizar cambios en la entrada o en la lógica de procesamiento.</p>
+  <p>Un valor de entrada fuera de rangos permitidos, lanza un cuadro de diálogo.</p>
+  <p>La retroalimentación de un sistema también surge cuando el estado de los datos que se encuentran en procesamiento disparan un evento en el que los administradores del sisteman deben tomar una decisión.</p>
+  <ul>Ejemplo
+    <li>El sistema detecta que un producto alcanzó el mínimo de exitencias en inventario y lanza un mensaje (cuadro de dialogo o correo electrónico) para avisar el caso.</li>
+  </ul>
 </article>
