Se agrego estilo a la pagina informacion util y se modifico e layout

--- a/views/InformacionUtil.hbs
+++ b/views/InformacionUtil.hbs
@@ -1,29 +1,47 @@
-<h1>Informacion util</h1>
-<img src="/images/infoUtil.jpg" alt="" width="70%">
+<h1 class="center">Informacion util</h1>
 
-<article class="">
-  <h2>Informacion</h2>
-  <p>La información es un conjunto organizado de datos procesados, que constituyen un mensaje que cambia el estado de conocimiento del sujeto o sistema que recibe dicho mensaje. </p>
-</article>
-<article class="">
-  <h2>Utilidad</h2>
-  <p>La utilidad es el interés, provecho o fruto que se obtiene de algo. El término también permite nombrar a la cualidad de útil (que puede servir o ser aprovechado en algún sentido). Algo útil sirve para satisfacer una necesidad.</p>
-  <p>En el ámbito de la informática también se ha uso del término utilidad. En este caso viene a hacer referencia a cualquier tipo de herramienta que se emplea con el único y claro objetivo de servir no sólo para poder llevar a cabo la construcción de un programa determinado sino también para la posterior ejecución del mismo.</p>
-</article>
-<article class="">
-  <h2>Informacion util</h2>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/informacion.jpg">
+        <span class="card-title">Información</span>
+      </div>
+      <div class="card-content">
+        <p>La información es un conjunto organizado de datos procesados, que constituyen un mensaje 
+          que cambia el estado de conocimiento del sujeto o sistema que recibe dicho mensaje.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s6">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/util.jpg">
+        <span class="card-title">Utilidad</span>
+      </div>
+      <div class="card-content">
+        <p>La utilidad es el interés, provecho o fruto que se obtiene de algo. El término también permite nombrar 
+          a la cualidad de útil (que puede servir o ser aprovechado en algún sentido). Algo útil sirve para 
+          satisfacer una necesidad.</p>
+        <p>En el ámbito de la informática también se ha uso del término utilidad. En este caso viene a hacer 
+          referencia a cualquier tipo de herramienta que se emplea con el único y claro objetivo de servir no sólo 
+          para poder llevar a cabo la construcción de un programa determinado sino también para la posterior 
+          ejecución del mismo.</p>  
+      </div>
+    </div>
+  </div>
+</div>
+
+<article class="iu center">
+  <h2 class="center">Informacion util</h2>
   <p>Para ser útil, la información debe ser relevante,  completa, precisa y actual</p>
   <h3>Caracteristicas</h3>
-  <ul>
-    <li><strong>Accesible.</strong><br>Mantener al alcance la información de una manera fácil, de tal forma que puedan obtenerla en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</li>
-    <li><strong>Exacta.</strong><br>Libre de errores. El sistema debe contar con mecanismos de verificación.</li>
-    <li><strong>Completa.</strong><br>Contiene los hechos relevantes.</li>
-    <li><strong>Económica.</strong><br>El costo de la producción de la información debe ser relativamente barato. Las personas que toman las decisiones siempre deben balancear el valor de la información con el costo de producirla.</li>
-    <li><strong>Flexible.</strong><br>La información es flexible cuando puede utilizarse para una gran variedad de propósitos</li>
-    <li><strong>Relevante.</strong><br>Es relevante cuando es importante para las personas que toman las decisiones.</li>
-    <li><strong>Segura.</strong><br>Protección al acceso de la información.</li>
-    <li><strong>Simple.</strong><br>La información debe establecerse en términos claros y concisos.</li>
-    <li><strong>Oportuna.</strong><br>Cuando se requiere y tiene un valor para el negocio.</li>
-    <li><strong>Verificable.</strong><br>Puede ser comprobada para verificar que es correcta.</li>
-  </ul>
+
+  {{#caracteristicas caracteristicas descripcion color}}{{/caracteristicas}}
+
 </article>
+
+<figure class="center ">
+  <img class="imgUtil" src="/images/infoUtil.jpg" alt="">
+</figure>
