Se agrego estilo a la pagina componentes y se modifico el layout

--- a/views/Componentes.hbs
+++ b/views/Componentes.hbs
@@ -1,44 +1,81 @@
-<h1>Componentes de un sistema de informacion</h1>
-<img src="/images/sistinfo.jpg" alt="" width="50%">
-<article class="">
-  <h2>Entrada</h2>
-  <p>Conformada con la recopilación y captura de datos al sistema.</p>
-  <ul>Ejemplo:
-    <li>El registro de las actas de calificaciones en la facultad.</li>
-    <li>Registro de una acta de escrutinio y cómputo en una elección.</li>
-    <li>El registro de los montos en una venta de medicamentos en una farmacia.</li>
-  </ul>
-</article>
-<article class="">
-  <h2>Procesamiento</h2>
-  <p>Es realizar operaciones(manual o automatizada) sobre los datos de entrada para extraer la mayor cantidad de informacion útil para la organización.</p>
-  <ul>En donde las operaciones incluyen:
-    <li>Almacenar para posterior uso.</li>
-    <li>Cálculos.</li>
-    <li>Comparar valores.</li>
-    <li>Realizar acciones alternas.</li>
-  </ul>
-  <ul>Ejemplos
-    <li>Calcular en una hoja de papel el total de ventas en un mes de un negocio.</li>
-    <li>Sumar la cantidad de votos para un partido.</li>
-  </ul>
-</article>
-<article class="">
-  <h2>Salida</h2>
-  <p>Conformada por toda la información útil lograda en el procesamiento.</p>
-  <p>La salida de un sistema puede ser la entrada de otro sistema.</p>
-  <ul>Ejemplos
-    <li>El historial académico de un alumno.</li>
-    <li>El reporte de compras realizadas un día antes. Este puede ser la entrada de un sistema de facturación.</li>
-    <li>Las gráficas de votos totales en un sistema de conteo.</li>
-  </ul>
-</article>
-<article class="">
-  <h2>Retroalimentacion</h2>
-  <p>Son los mensajes que emite el sistema para realizar cambios en la entrada o en la lógica de procesamiento.</p>
-  <p>Un valor de entrada fuera de rangos permitidos, lanza un cuadro de diálogo.</p>
-  <p>La retroalimentación de un sistema también surge cuando el estado de los datos que se encuentran en procesamiento disparan un evento en el que los administradores del sisteman deben tomar una decisión.</p>
-  <ul>Ejemplo
-    <li>El sistema detecta que un producto alcanzó el mínimo de exitencias en inventario y lanza un mensaje (cuadro de dialogo o correo electrónico) para avisar el caso.</li>
-  </ul>
+<h1 class="center">Componentes de un sistema de informacion</h1>
+
+<figure class="center">
+  <img src="/images/sistinfo.jpg" alt="" width="50%">
+</figure>
+
+<div class="row">
+  <div class="center col s6"><a class="waves-effect waves-light btn modal-trigger pulse" href="#modal1">Entrada</a></div>
+  <div class="center col s6"><a class="waves-effect waves-light btn modal-trigger pulse" href="#modal2">Procesamiento</a></div>
+  <div class="center col s6"><a class="waves-effect waves-light btn modal-trigger pulse" href="#modal3">Salida</a></div>
+  <div class="center col s6"><a class="waves-effect waves-light btn modal-trigger pulse" href="#modal4">Retroalimentación</a></div>
+</div>
+
+<!-- Modal Structure -->
+<div id="modal1" class="modal">
+  <div class="modal-content">
+    <h4>Entrada</h4>
+    <p>Conformada con la recopilación y captura de datos al sistema.</p>
+    <ul>Ejemplo:
+      <li>El registro de las actas de calificaciones en la facultad.</li>
+      <li>Registro de una acta de escrutinio y cómputo en una elección.</li>
+      <li>El registro de los montos en una venta de medicamentos en una farmacia.</li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Salir</a>
+  </div>
+</div>
+
+<div id="modal2" class="modal">
+  <div class="modal-content">
+    <h4>Procesamiento</h4>
+    <p>Es realizar operaciones(manual o automatizada) sobre los datos de entrada para extraer la mayor cantidad de informacion útil para la organización.</p>
+    <ul>En donde las operaciones incluyen:
+      <li>Almacenar para posterior uso.</li>
+      <li>Cálculos.</li>
+      <li>Comparar valores.</li>
+      <li>Realizar acciones alternas.</li>
+    </ul>
+    <ul>Ejemplos
+      <li>Calcular en una hoja de papel el total de ventas en un mes de un negocio.</li>
+      <li>Sumar la cantidad de votos para un partido.</li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Salir</a>
+  </div>
+</div>
+
+<div id="modal3" class="modal">
+  <div class="modal-content">
+    <h4>Salida</h4>
+    <p>Conformada por toda la información útil lograda en el procesamiento.</p>
+    <p>La salida de un sistema puede ser la entrada de otro sistema.</p>
+    <ul>Ejemplos
+      <li>El historial académico de un alumno.</li>
+      <li>El reporte de compras realizadas un día antes. Este puede ser la entrada de un sistema de facturación.</li>
+      <li>Las gráficas de votos totales en un sistema de conteo.</li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Salir</a>
+  </div>
+</div>
+
+<div id="modal4" class="modal">
+  <div class="modal-content">
+    <h4>Retroalimentacion</h4>
+    <p>Son los mensajes que emite el sistema para realizar cambios en la entrada o en la lógica de procesamiento.</p>
+    <p>Un valor de entrada fuera de rangos permitidos, lanza un cuadro de diálogo.</p>
+    <p>La retroalimentación de un sistema también surge cuando el estado de los datos que se encuentran en procesamiento disparan un evento en el que los administradores del sisteman deben tomar una decisión.</p>
+    <ul>Ejemplo
+      <li>El sistema detecta que un producto alcanzó el mínimo de exitencias en inventario y lanza un mensaje (cuadro de dialogo o correo electrónico) para avisar el caso.</li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Salir</a>
+  </div>
+</div>
+
 </article>
