Se agrego estilo a la pagina MIS y se modifico el layout

--- a/views/mis.hbs
+++ b/views/mis.hbs
@@ -1,8 +1,7 @@
-<h1>{{title}}</h1>
+<h1 class="center">{{title}}</h1>
 
-<article class="">
+<article class="center">
   <h2>Definicion</h2>
-  <img src="/images/mis4.gif" alt="">
   <p>
     <ul>
     <li>Apoya a la gerencia con las actividades de control, monitoreo y
@@ -15,13 +14,14 @@
     intervalo de tiempo predefinido.</li>
   </ul>
   </p>
-
-  <img src="/images/mis1.png" alt="">
+  <img src="/images/mis4.gif" alt="">
 </article>
 
-<article class="">
-  <h2>¿De donde viene la informacion?</h2>
-  <p>De sistemas <a href="spt">TPS</a>: </p>
+<img class="imgStruc" src="/images/mis1.png" alt="">
+
+<article>
+  <h2 class="center">La informacion proviene de diferentes sistemas</h2>
+  <p>De sistemas TPS: </p>
   <ul>
     <li> Sistemas de Inventario</li>
     <li> Sistemas de Planeación de Producción.</li>
@@ -31,11 +31,13 @@
     <li> Sistema de Ventas.</li>
     <li> Sistemas de Inteligencia de negocio.  </li>
   </ul>
-  De un Sistema de Planificación de Recursos (ERP), que son sistemas que integran a los anteriores.
-  <img src="/images/mis2.png" alt="">
+  <p>De un Sistema de Planificación de Recursos (ERP), que son sistemas que integran a los anteriores.</p>
+  <div class="center">
+    <img src="/images/mis2.png" alt="">
+  </div>
 </article>
 
-<article class="">
+<article class="center">
   <h2>Funciones</h2>
   <p>El MIS y sus sistemas aledaños contribuyen a la solución de problemas a través de dos formas básicas: los recursos de información que abarcan a toda la organización, y la identificación y comprensión de los problemas. Los recursos de información que abarcan toda la organización se refieren a que el MIS es un esfuerzo que requiere de toda la organización y que busca proporcionar información importante para la toma de decisiones. El sistema es un acuerdo y un compromiso formal por parte de
     los ejecutivos de poner computadoras al servicio de los gerentes. El MIS acondiciona el terreno para alcanzar logros en otras áreas de la empresa relacionadas con los SIBC, como son los DSS, los sistemas basados en conocimientos y la oficina virtual (McLeod, 2000). La identificación y comprensión de los problemas se refiere a que la idea o concepto fundamental en el que se basa el MIS es el mantenimiento de un flujo continuo de información hacia el gerente, ya que el gerente usa el MIS
