termine los conceptos de Scrum

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,7 +72,7 @@
             <ul>
               <li><a title="Herramientas" class="btn-floating indigo darken-2"><i class="material-icons">build</i></a></li>
               <li><a title="Roles" class="btn-floating yellow darken-1"><i class="material-icons">face</i></a></li>
-              <li><a title="Definición" class="btn-floating blur"><i class="material-icons">description</i></a></li>
+              <li><a href="scrum" title="Definición" class="btn-floating blur"><i class="material-icons">description</i></a></li>
               <li><a href="metodologiasAgiles" title="Metodologia Agil" class="btn-floating green"><i class="material-icons" >directions_run</i></a></li>
             </ul>
           </div>
