--- a/views/crm.hbs
+++ b/views/crm.hbs
@@ -1,79 +1,115 @@
-<h1>{{title}}</h1>
+<h1 class="center">{{title}}</h1>
 
-<article class="">
-  <h2>Definicion</h2>
+<article class="definicion">
+  <h2 class="center">Definicion</h2>
   <p>
-
-    La customer relationship management, más conocida por sus siglas CRM, puede tener varios significados:1​
+    La customer relationship management, más conocida por sus siglas CRM, puede tener varios significados:
     <ul>
-     <li>Administración basada en la relación con los clientes, un modelo de gestión de toda la organización, basada en la satisfacción del cliente (u orientación al mercado según otros autores). El concepto más cercano es marketing relacional (según se usa en España) y tiene mucha relación con otros conceptos como: clienting, marketing 1x1, marketing directo de base de datos, etc.</li>
-      <li>Software para la administración de la relación con los clientes. Sistemas informáticos de apoyo a la gestión de las relaciones con los clientes, a la venta y al marketing,2​ y que se integran en los llamados Sistemas de Gestión Empresarial (SGE), y que incluyen CRM, ERP, PLM, SCM y SRM. El software de CRM puede comprender varias funcionalidades para gestionar las ventas y los clientes de la empresa: automatización y promoción de ventas, tecnologías data warehouse («almacén de datos») para agregar la información transaccional y proporcionar capa de reporting, dashboards e indicadores claves de negocio, funcionalidades para seguimiento de campañas de marketing y gestión de oportunidades de negocio, capacidades predictivas y de proyección de ventas.</li>
+     <li>Administración basada en la relación con los clientes, un modelo de gestión de toda la organización,
+        basada en la satisfacción del cliente (u orientación al mercado según otros autores). El concepto más 
+        cercano es marketing relacional (según se usa en España) y tiene mucha relación con otros conceptos 
+        como: clienting, marketing 1x1, marketing directo de base de datos, etc.</li>
+        <br>
+      <li>Software para la administración de la relación con los clientes. Sistemas informáticos de apoyo a 
+        la gestión de las relaciones con los clientes, a la venta y al marketing,2​ y que se integran en los
+        llamados Sistemas de Gestión Empresarial (SGE), y que incluyen CRM, ERP, PLM, SCM y SRM. El software 
+        de CRM puede comprender varias funcionalidades para gestionar las ventas y los clientes de la empresa: 
+        automatización y promoción de ventas, tecnologías data warehouse («almacén de datos») para agregar la 
+        información transaccional y proporcionar capa de reporting, dashboards e indicadores claves de negocio, 
+        funcionalidades para seguimiento de campañas de marketing y gestión de oportunidades de negocio, 
+        capacidades predictivas y de proyección de ventas.</li>
     </ul>
   </p>
-
-  <img src="/images/crm.jpg" alt="">
+  <figure class="center">
+    <img src="/images/crm.jpg" alt="">
+  </figure>
 </article>
 
-<article class="">
-  <h2>Funciones</h2>
-  <p>Cuando el software CRM está separado para gestionar el negocio, la gestión del ciclo de vida de las ventas y clientes es difícil o imposible. Y la gestión de ciclo de vida es muy importante ya que muchas empresas hoy en día interactúan con el cliente mucho tiempo después de que se realizó la venta, colaborando con ellos en la ingeniería bajo pedido (ETO), configurar a pedido (CTO) o procesos de gestión de servicios.
-    Cada vez más el CRM debe ser extensible para apoyar a la planificación de recursos empresariales funcionalidades como la ingeniería, fabricación, compras, finanzas y gestión de servicios.
-    Debido a que el CRM de empresa - o el CRM estratégico - es una parte integral del ERP, aporta información completa del cliente sobre el proyecto, las facturas, inventario, etc.
+<article class="funciones">
+  <h2 class="center">Funciones</h2>
+  <p>Cuando el software CRM está separado para gestionar el negocio, la gestión del ciclo de vida de las ventas
+     y clientes es difícil o imposible. Y la gestión de ciclo de vida es muy importante ya que muchas empresas 
+     hoy en día interactúan con el cliente mucho tiempo después de que se realizó la venta, colaborando con ellos 
+     en la ingeniería bajo pedido (ETO), configurar a pedido (CTO) o procesos de gestión de servicios. Cada vez 
+     más el CRM debe ser extensible para apoyar a la planificación de recursos empresariales funcionalidades como 
+     la ingeniería, fabricación, compras, finanzas y gestión de servicios. Debido a que el CRM de empresa - o el 
+     CRM estratégico - es una parte integral del ERP, aporta información completa del cliente sobre el proyecto, 
+     las facturas, inventario, etc.
   </p>
 </article>
 
-<article class="">
-  <h2>Componentes</h2>
-  <article class="">
-    <h3>Servicio al cliente</h3>
-    <ul>
-      <li>Call Center</li>
-      <li>Centros de Ayuda (Help Desk)</li>
-      <li>Apps y aplicaciones Web para el apoyo de clientes.</li>
-      <li>Feedback</li>
+<div class="cpnts">
+  <h2 class="center">Componentes</h2>
+  <div class=" center componentes">
+    <ul id="tabs-swipe-demo" class=" center tabs">
+      <li class="tab col s3"><a class="active" href="#test-swipe-1">Servicio al cliente</a></li>
+      <li class="tab col s3"><a href="#test-swipe-2">Automatización</a></li>
+      <li class="tab col s3"><a href="#test-swipe-3">Analitica e inteligencia</a></li>
+      <li class="tab col s3"><a href="#test-swipe-4">Integración</a></li>
     </ul>
 
-    <img src="/images/crm1.png" alt="">
-  </article>
+    <div id="test-swipe-1" class="col s12">
+      <h5>Servicio al cliente</h5>
+      <ul>
+        <li>Call Center</li>
+        <li>Centros de Ayuda (Help Desk)</li>
+        <li>Apps y aplicaciones Web para el apoyo de clientes.</li>
+        <li>Feedback</li>
+      </ul>
+      <figure>
+        <img class="imgTable" src="/images/crm1.png" alt="">
+      </figure>
+    </div>
 
-  <article class="">
-    <h3>Automatizacion de ventas y marketing</h3>
-    <ul>
-      <li> Administración de clientes.</li>
-      <li> Administración de campañas.</li>
-      <li> Administración de ventas.</li>
-      <li> Análisis de ventas.</li>
-      <li> Selección de clientes de mayor potencial.</li>
-      <li> Soporte para la configuración del producto.</li>
-      <li> Entre otras.</li>
-    </ul>
-  </article>
+    <div id="test-swipe-2" class="col s12">
+      <h5>Automatizacion de ventas y marketing</h5>
+      <ul>
+        <li> Administración de clientes.</li>
+        <li> Administración de campañas.</li>
+        <li> Administración de ventas.</li>
+        <li> Análisis de ventas.</li>
+        <li> Selección de clientes de mayor potencial.</li>
+        <li> Soporte para la configuración del producto.</li>
+        <li> Entre otras.</li>
+      </ul>
+      <figure>
+        <img class="imgTable" src="/images/automatizacion.png" alt="">
+      </figure>
+    </div>
 
-  <article class="">
-    <h3>Analitica e inteligencia del negocio</h3>
-    <ul>
-      <li> Es el empleo de herramientas y técnicas para la identificación de
-      oportunidades de negocio en base a los datos de los clientes actuales.</li>
-      <li> Para ello se emplean cubos de datos o sistemas OLAP (On Line
-      Analytical Processing)</li>
-    </ul>
-    <img src="/images/crm3.jpg" alt="">
-  </article>
+    <div id="test-swipe-3" class="col s12">
+      <h5>Analitica e inteligencia del negocio</h5>
+      <ul>
+        <li> Es el empleo de herramientas y técnicas para la identificación de
+        oportunidades de negocio en base a los datos de los clientes actuales.</li>
+        <li> Para ello se emplean cubos de datos o sistemas OLAP (On Line
+        Analytical Processing)</li>
+      </ul>
+      <figure>
+        <img class="imgTable" src="/images/crm3.jpg" alt="">
+      </figure>
+    </div>
 
-  <article class="">
-    <h3>Integracion</h3>
-    <ul>
-      <li>Es el conjunto de software que da soporte a un CRM conformado por
-      un Front Office y un Back Office.</li>
-      <li>Front-Office es el subconjunto de software que tiene conexión directa
-      con el cliente, principalmente tomar pedidos, configurar productos y</li>
-      dar soporte post-venta(al producto). Analizan y procesan
-      produciendo información del cliente casi de forma instantanea.</li>
-      <li>Back-Office Es el subconjunto de herramientas que no tienen relación
-      o interacción directa con el cliente. Pero si almacenan y procesan los
-      datos adquiridos de él. Requiere de operaciones de analisis o Minería
-      de datos para obtener información compleja del comportamiento de
-      clientes. </li>
-    </ul>
-  </article>
-</article>
+    <div id="test-swipe-4" class="col s12">
+      <h5>Integracion</h5>
+      <ul>
+        <li>Es el conjunto de software que da soporte a un CRM conformado por
+        un Front Office y un Back Office.</li><br>
+        <li>Front-Office es el subconjunto de software que tiene conexión directa
+        con el cliente, principalmente tomar pedidos, configurar productos y
+        dar soporte post-venta(al producto). Analizan y procesan
+        produciendo información del cliente casi de forma instantanea.</li>
+        <li>Back-Office Es el subconjunto de herramientas que no tienen relación
+        o interacción directa con el cliente. Pero si almacenan y procesan los
+        datos adquiridos de él. Requiere de operaciones de analisis o Minería
+        de datos para obtener información compleja del comportamiento de
+        clientes. </li>
+      </ul>
+      <figure>
+        <img src="/images/FrontBack.jpg" alt="" class="imgTable">
+      </figure>
+    </div>
+  </div>
+
+</div>
+
