Añadí mi imagen

--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -3,6 +3,9 @@
 <div class="">
   <article class="">
     <h2 class="">J. Eduardo Sánchez P.</h2>
+    <div class="center">
+      <img class="circle" src="/images/eduardo-profile.jpg" alt="yomero">
+    </div>
     <ul>
       <li>Número de cuenta 313081422</li>
       <li>Email: jsanchez@eslibertad.org</li>
