--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -1,8 +1,6 @@
-<h1>{{title}}</h1>
-
 <div class="">
   <article class="">
-    <h2 class="">J. Eduardo Sánchez P.</h2>
+    <h2 class="">J. Eduardo S&aacute;nchez P.</h2>
     <div class="center">
       <img class="circle" src="/images/eduardo-profile.jpg" alt="yomero">
     </div>
