Cambie nombre a la imagen.

--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -2,7 +2,7 @@
   <article class="">
     <h2 class="">J. Eduardo S&aacute;nchez P.</h2>
     <div class="center">
-      <img class="circle" src="/images/eduardo-profile.jpg" alt="yomero" width="30%">
+      <img class="circle" src="/images/eduardo-picture.jpg" alt="yomero" width="30%">
     </div>
     <ul>
       <li>Número de cuenta 313081422</li>
