Se corrigio titulo

--- a/views/marco.hbs
+++ b/views/marco.hbs
@@ -3,7 +3,7 @@
     <article class="flex-container">
       <section class="infoPersonal">
         <img class="fPerfil" src="/images/MarcoFoto.jpg" alt="Foto">
-        <h5>Información Personal</h5>
+        <h5>Informacion Personal</h5>
         <p>Nombre: Nava Cruz Marco Antonio</p>
         <p>No. de Cuenta: 313166129</p>
         <p>Correo: marconava2410@gmail.com</p>
