--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -1,6 +1,6 @@
 <div class="">
   <article class="">
-    <h2 class="">J. Eduardo S&aacute;nchez P.</h2>
+    <h2 class="">J. Eduardo Sanchez P.</h2>
     <div class="center">
       <img class="circle" src="/images/eduardo-picture.jpg" alt="yomero" width="30%">
     </div>
@@ -22,7 +22,7 @@
     <h2>Redes Sociales</h2>
     <li>Facebook: <a href="http://www.facebook.com/jeduardo.schz">Eduardo Sánchez</a> </li>
     <li>Instagram: <a href="http://www.instagram.com/jeduardo.schz">Eduardo Sánchez</a></li>
-    <li>Twitter: <a href="http://www.twitter.com/jeduardo_schz@gmail.com"></a> </li>
-    <li>GitHub: <a href="http://www.github.com/eduardoschz"></a> </li>
+    <li>Twitter: <a href="http://www.twitter.com/jeduardo_schz@gmail.com">Eduardo Sánchez</a> </li>
+    <li>GitHub: <a href="http://www.github.com/eduardoschz">Eduardo Sánchez</a> </li>
   </article>
 </div>
