--- a/views/marco.hbs
+++ b/views/marco.hbs
@@ -1,5 +1,5 @@
 <section id="marco" class="bloques">
-    <h3>Scrum Team</h3>
+    <h3>Scrum Team: {{title}}</h3>
     <article class="flex-container">
       <section class="infoPersonal">
         <img class="fPerfil" src="/images/MarcoFoto.jpg" alt="Foto">
