--- a/views/Luis.hbs
+++ b/views/Luis.hbs
@@ -1,5 +1,5 @@
 <h1>LUIS</h1>
-<img src="/images/fotoLuis.jpg" alt="" width="30%">
+<img src="/images/fotoLuis.jpg" alt="" width="30%" class="circle">
 <ul>
   <li>Luis Angel Garcia Cervantes</li>
   <li>313058044</li>
