Estructura de la informacion.

--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -1,28 +1,34 @@
-<div class="">
-  <article class="">
-    <h2 class="">J. Eduardo Sanchez P.</h2>
-    <div class="center">
-      <img class="circle" src="/images/eduardo-picture.jpg" alt="yomero" width="30%">
-    </div>
-    <ul>
-      <li>Número de cuenta 313081422</li>
-      <li>Email: jsanchez@eslibertad.org</li>
-      <li>
-        <p>Estudiante de ingeniería en computacion. Libertario. Administrador
-          de bases de datos en <a href="http://www.studentsforliberty.com/eslib">EsLibertad México</a>.
-          Me gusta aprender cosas nuevas. Me interesan la relaciones internacionales.</p>
-      </li>
-    </ul>
+<section id="eduardo" class="bloques">
+  <h3>Scrum Master</h3>
+  <article class="flex-container">
+    <section class="infoPersonal">
+      <img class="fPerfil" src="/images/eduardo-picture.jpg" alt="Foto">
+      <h5>Informacion Personal</h5>
+      <p>Nombre: Sanchez P., José Eduardo</p>
+      <p>No. de Cuenta: 313081422</p>
+      <p>Correo: jsanchez@eslibertad.org</p>
+      <p>Semestre: 8to. Semestre</p>
+    </section>
+    <section class="infoGral">
+      <h5>Hobbies</h5>
+      <p>Estudiante de ingeniería en computacion. Libertario. Administrador
+        de bases de datos y Coordinador Local Senior en <a href="http://www.studentsforliberty.com/eslib">EsLibertad México</a>.
+        Me gusta aprender cosas nuevas. Me interesa el desarrollo web y móvil; tambien la economía y las relaciones internacionales. Me gusta leer sobre <a href="https://www.youtube.com/watch?v=G1AHoFlvcGk">Ayn Rand</a> </p>
+      <article class="flex-container">
+        <img class="hobbies" src="/images/sfl.png" alt="Anime">
+        <img class="hobbies" src="/images/relint.jpeg" alt="Comic">
+        <img class="hobbies" src="/images/aynrand.png" alt="Games">
+        <img class="hobbies" src="/images/movdev.png" alt="Musica">
+        <img class="hobbies" src="/images/webdev.png" alt="Games">
+        <img class="hobbies" src="/images/block.jpg" alt="Games">
+      </article>
+      <h5>Redes Sociales</h5>
+      <article class="flex-container">
+        <a href="http://www.facebook.com/jeduardo.schz"><img class="redes" src="/images/facebookIcon.jpg" alt="Facebook"></a>
+        <a href="http://www.github.com/eduardoschz"><img class="redes" src="/images/GithubIcon.png" alt="Github"></a>
+        <a href="http://www.twitter.com/jeduardo_schz@gmail.com"><img class="redes" src="../images/Twitter.png" alt="Twitter"></a>
+        <a href="http://www.instagram.com/jeduardo.schz"><img class="redes" src="/images/insta.jpg" alt="Instagram"></a>
+      </article>
+    </section>
   </article>
-</div>
-
-
-<div class="">
-  <article class="">
-    <h2>Redes Sociales</h2>
-    <li>Facebook: <a href="http://www.facebook.com/jeduardo.schz">Eduardo Sánchez</a> </li>
-    <li>Instagram: <a href="http://www.instagram.com/jeduardo.schz">Eduardo Sánchez</a></li>
-    <li>Twitter: <a href="http://www.twitter.com/jeduardo_schz@gmail.com">Eduardo Sánchez</a> </li>
-    <li>GitHub: <a href="http://www.github.com/eduardoschz">Eduardo Sánchez</a> </li>
-  </article>
-</div>
+</section>
