--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -26,7 +26,7 @@
       <article class="flex-container">
         <a href="http://www.facebook.com/jeduardo.schz"><img class="redes" src="/images/facebookIcon.jpg" alt="Facebook"></a>
         <a href="http://www.github.com/eduardoschz"><img class="redes" src="/images/GithubIcon.png" alt="Github"></a>
-        <a href="http://www.twitter.com/jeduardo_schz@gmail.com"><img class="redes" src="../images/Twitter.png" alt="Twitter"></a>
+        <a href="http://www.twitter.com/jeduardo_schz"><img class="redes" src="../images/Twitter.png" alt="Twitter"></a>
         <a href="http://www.instagram.com/jeduardo.schz"><img class="redes" src="/images/insta.jpg" alt="Instagram"></a>
       </article>
     </section>
