Se corrigio el semestre

--- a/views/marco.hbs
+++ b/views/marco.hbs
@@ -7,7 +7,7 @@
         <p>Nombre: Nava Cruz Marco Antonio</p>
         <p>No. de Cuenta: 313166129</p>
         <p>Correo: marconava2410@gmail.com</p>
-        <p>Semestre: 8to. Semestre</p>
+        <p>Semestre: 8vo. Semestre</p>
       </section>
       <section class="infoGral">
         <h5>Hobbies</h5>
