--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,7 @@
   <link rel='stylesheet' href='/stylesheets/materialize.min.css'/>
   <link rel="stylesheet" href="/stylesheets/global.css">
   <link rel='stylesheet' href='/stylesheets/{{VC}}.css'/>
+  <link rel="icon" type="image/ico" href="/images/favicon.ico">
   <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
   <script src="/javascripts/materialize.min.js"></script>
@@ -26,7 +27,7 @@
 
   {{#submenus navigacion.target navigacion.temas navigacion.ligas}}{{/submenus}}
 
-  {{{body}}}  
+  {{{body}}}
 
   <footer class="page-footer blue-grey darken-1">
     <div class="container">
