Modifique los datos personales

--- a/views/marco.hbs
+++ b/views/marco.hbs
@@ -5,8 +5,8 @@
         <img class="fPerfil" src="/images/MarcoFoto.jpg" alt="Foto">
         <h5>Informacion Personal</h5>
         <p>Nombre: Nava Cruz Marco Antonio</p>
-        <p>No. de Cuenta: 313166129</p>
-        <p>Correo: marconava2410@gmail.com</p>
+        <p>No. de Cuenta: 129</p>
+        <p>Correo: marconava@si.com</p>
         <p>Semestre: 8vo. Semestre</p>
       </section>
       <section class="infoGral">
