Modifiqué mis datos personales

--- a/views/eduardo.hbs
+++ b/views/eduardo.hbs
@@ -5,8 +5,8 @@
       <img class="fPerfil" src="/images/eduardo-picture.jpg" alt="Foto">
       <h5>Informacion Personal</h5>
       <p>Nombre: Sanchez P., José Eduardo</p>
-      <p>No. de Cuenta: 313081422</p>
-      <p>Correo: jsanchez@eslibertad.org</p>
+      <p>No. de Cuenta: 422</p>
+      <p>Correo: js@eslibertad.org</p>
       <p>Semestre: 8to. Semestre</p>
     </section>
     <section class="infoGral">
